--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['run', 'deploy', 'test-continuous-deployment',
            '--source', '.',
-           '--region', 'europe-west3',  # Cambia regione se necessario
+           '--region', 'europe-west3',  
            '--platform', 'managed',
            '--allow-unauthenticated']
 
