--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,4 +20,4 @@ steps:
 images:
 - 'europe-west3-docker.pkg.dev/soft-analytics-gcp/cloud-run-source-deploy/test-continuous-deployment:$_COMMIT_SHA'
 
-#testing comment
+#testing comments
